--- a/client/src/components/Table/Table.module.scss
+++ b/client/src/components/Table/Table.module.scss
@@ -9,8 +9,13 @@
 }
 
 .wrapper {
-  overflow: auto;
+  display: flex;
+  justify-content: center;
+
+  width: fit-content;
   max-height: 400px;
+  margin: 0 auto;
+  overflow: auto;
 
   border-radius: 0.5rem;
   box-shadow: var(--box-shadow);
