--- a/client/src/components/Accordion/Accordion.module.scss
+++ b/client/src/components/Accordion/Accordion.module.scss
@@ -10,7 +10,7 @@
     }
   }
 
-  transition: background 0.1s ease;
+  transition: background 0.1s var(--transition-timing-function);
 
   &:hover {
     background: var(--color-dark);
@@ -56,6 +56,6 @@
   .content {
     overflow: hidden;
 
-    transition: height 0.2s ease;
+    transition: height 0.2s var(--transition-timing-function);
   }
 }
