--- a/client/src/components/Logo/Logo.module.scss
+++ b/client/src/components/Logo/Logo.module.scss
@@ -8,7 +8,7 @@
     fill: var(--color-danger);
 
     animation: spinner 30s linear infinite;
-    transition: fill 0.3s ease;
+    transition: fill var(--transition-duration) var(--transition-timing-function);
   }
 
   h2 {
