--- a/client/src/components/Table/Table.module.scss
+++ b/client/src/components/Table/Table.module.scss
@@ -5,7 +5,7 @@
   text-align: center;
   margin: 0.5rem 0;
 
-  transition: all 0.3s ease;
+  transition: all var(--transition-duration) var(--transition-timing-function);
 }
 
 .wrapper {
@@ -17,7 +17,7 @@
   margin: 0 auto;
   overflow: auto;
 
-  border-radius: 0.5rem;
+  border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
 
   table {
@@ -34,7 +34,7 @@
       color: var(--color-background);
       background-color: var(--color-accent);
 
-      transition: all 0.3s ease;
+      transition: all var(--transition-duration) var(--transition-timing-function);
 
       tr th {
         padding: 0.25rem 0.5rem;
@@ -48,7 +48,7 @@
       }
 
       tr {
-        transition: all 0.3s ease;
+        transition: all var(--transition-duration) var(--transition-timing-function);
       }
 
       tr:nth-child(odd) {
