--- a/client/src/pages/Regions/Regions.module.scss
+++ b/client/src/pages/Regions/Regions.module.scss
@@ -8,7 +8,6 @@
     'controls controls'
     'main side';
 
-  // grid-template-columns: auto 1fr;
   grid-template-columns: unset;
   gap: 1rem;
 
@@ -32,7 +31,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    border-radius: 0.5rem;
+    border-radius: var(--border-radius);
 
     max-height: 80vh;
     overflow-y: auto;
@@ -44,7 +43,7 @@
     background-color: var(--color-background);
     color: var(--color-accent);
 
-    transition: background-color 0.3s ease;
+    transition: background-color var(--transition-duration) var(--transition-timing-function);
   }
 }
 
