--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -7,7 +7,7 @@
   z-index: 10;
   background-color: rgba(0, 0, 0, $alpha);
 
-  transition: opacity 0.5s ease;
+  transition: opacity 0.5s var(--transition-timing-function);
 }
 
 @mixin Ellipsis() {
