--- a/client/src/components/Logo/Logo.module.scss
+++ b/client/src/components/Logo/Logo.module.scss
@@ -5,21 +5,13 @@
   svg {
     width: 3rem;
     height: 3rem;
-    fill: var(--color-danger);
-
-    animation: spinner 30s linear infinite;
-    transition: fill var(--transition-duration) var(--transition-timing-function);
   }
 
   h2 {
+    transition: color var(--transition-duration) var(--transition-timing-function);
+
     span {
       color: var(--color-danger);
-    }
-  }
-
-  @keyframes spinner {
-    to {
-      transform: rotate(360deg);
     }
   }
 }
