--- a/client/src/pages/About/About.module.scss
+++ b/client/src/pages/About/About.module.scss
@@ -14,6 +14,19 @@
     margin: 1rem 0;
   }
 
+  hr {
+    margin: 1rem 0;
+    border-width: 1px;
+  }
+
+  hr.title {
+    border-style: solid;
+  }
+
+  hr.inset {
+    border-style: inset;
+  }
+
   ul {
     margin: 1rem 0;
 
@@ -23,10 +36,10 @@
 
       a {
         font-weight: 500;
-        color: var(--color-danger);
+        color: var(--color-primary);
 
         &:hover {
-          color: var(--color-primary);
+          color: var(--color-danger);
         }
       }
     }
