ci: minor styling fixes

--- a/client/src/components/Block/Block.module.scss
+++ b/client/src/components/Block/Block.module.scss
@@ -26,7 +26,7 @@
     border-radius: var(--border-radius-up);
 
     color: var(--color-accent-alt);
-    background-color: var(--color-accent);
+    background-color: var(--color-table-head);
 
     transition: all var(--transition-duration) var(--transition-timing-function);
   }
