--- a/client/src/pages/About/About.module.scss
+++ b/client/src/pages/About/About.module.scss
@@ -1,6 +1,8 @@
+@use '~styles/partials/mixins';
+
 .container {
   margin-top: var(--content-margin);
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 
   h3 {
     font-size: 1.6rem;
@@ -40,6 +42,10 @@
 
         &:hover {
           color: var(--color-danger);
+        }
+
+        &.disabled {
+          @include mixins.Disabled();
         }
       }
     }
