--- a/client/src/pages/Regions/Regions.module.scss
+++ b/client/src/pages/Regions/Regions.module.scss
@@ -5,11 +5,9 @@
   justify-content: center;
 
   grid-template-areas:
-    'controls controls'
-    'main side';
-
-  grid-template-columns: unset;
-  gap: 1rem;
+    'controls'
+    'base'
+    'main';
 
   height: min-content;
 
@@ -23,39 +21,27 @@
     padding-bottom: 1rem;
   }
 
+  .base {
+    grid-area: base;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+
+    border-radius: var(--border-radius);
+  }
+
   .main {
     grid-area: main;
   }
 
-  .side {
-    grid-area: side;
-
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    border-radius: var(--border-radius);
-
-    max-height: 80vh;
-    overflow-y: auto;
-
-    padding: 0 1rem;
-  }
-
   select {
     font-size: 1.25rem;
-    width: min-content;
-    background-color: var(--color-background);
+
     color: var(--color-accent);
+    background-color: var(--color-background);
 
     transition: background-color var(--transition-duration) var(--transition-timing-function);
-  }
-}
-
-@media screen and (max-width: variables.$mobile-width) {
-  .container {
-    grid-template-areas:
-      'controls controls'
-      'side side'
-      'main main';
   }
 }
