--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -92,9 +92,8 @@ button {
   }
 }
 
-@media screen and (max-width: variables.$mobile-width) {
+@media screen and (max-width: variables.$no-sidebar-width) {
   .container {
-    width: 100%;
     grid-template-columns: 1fr;
   }
 }
